# Helldivers2CallForStratagemsOnPhone

./: .gitignore  LICENSE  README.md  README_zh_CN.md  server_api_0_5.md  server_api_6.md  usage.md  usage_zh_CN.md
call-for-stratagems/: settings.gradle.kts
call-for-stratagems/app/: build.gradle.kts
call-for-stratagems/app/schemas/indie.wistefinch.callforstratagems.data.AsrKeywordDatabase/: 1.json
call-for-stratagems/app/schemas/indie.wistefinch.callforstratagems.data.GroupDatabase/: 1.json  2.json  3.json
call-for-stratagems/app/schemas/indie.wistefinch.callforstratagems.data.StratagemDatabase/: 1.json  2.json
call-for-stratagems/app/src/main/: AndroidManifest.xml
call-for-stratagems/app/src/main/assets/database/: initial_db.db  stratagem_db.db  stratagem_db.db-shm  stratagem_db.db-wal  stratagem_initial_db.db
call-for-stratagems/app/src/main/res/anim/: to_right.xml
call-for-stratagems/app/src/main/res/color/: switch_color.xml
call-for-stratagems/app/src/main/res/drawable/: airburst_rocket_launcher.xml  anti_materiel_rifle.xml  anti_personnel_minefield.xml  anti_tank_mines.xml  (+115 more)
call-for-stratagems/gradle/: libs.versions.toml
call-for-stratagems/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/src/: config.rs  data.rs  error.rs  key.rs  lib.rs  logger.rs  main.rs  request.rs  tool.rs
server/src/data/: auth.rs  config.rs  input.rs  mod.rs  operation.rs
server/src/locales/: en.yml  zh-CN.yml
server/src/modules/: auth.rs  config.rs  input.rs  mod.rs  net.rs
server/src/tool/: key_utils.rs  logger.rs  mod.rs  version.rs
(+150 files in other folders)
