[package]
name = "server"
version = "0.5.1"
edition = "2021"
authors = ["WisteFinch", "FloatingLight233"]
license = "MIT"
repository = "https://github.com/WisteFinch/Helldivers2CallForStratagemsOnPhone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local_ipaddress = "0.1.3"
colored = "2.1.0"
rand = "0.8.5"
fast_qr = "0.12.5"
rust-i18n = "3.0.1"
sys-locale = "0.3.1"
log = { version = "0.4.22", features = ["std"] }
thiserror = "2.0.9"

[profile.release]
lto = true
strip = true
codegen-units = 1
